freest/test/prog/Invalid/Linearity/ForkLinExp/ForkLinExp.fst
module ForkLinExp where

main : ()
main = fork (\(_ : ()) 1-> channel @Close)
